--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,5 +1,5 @@
 rizky:
   name: Rizky Firman Syah
-  title: Owner of Rizfirsy.com
+  title: Author
   url: https://github.com/rizfirsy-git
   image_url: https://github.com/rizfirsy-git.png
