refactoring blog folder structure based on the date created

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,5 +1,5 @@
 rizky:
   name: Rizky Firman Syah
-  title: Author
+  title: Editor of BahasJavascript.com
   url: https://github.com/rizfirsy-git
   image_url: https://github.com/rizfirsy-git.png
